# CryptTool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  verify-capability-audit.yml
artifacts/collector-soak/: overlap-audit-20260714.md  process-audit-20260714.json
configs/: accelerated-validation.yaml  default.yaml  market-data-certification.yaml  paper-operation.yaml  research-collector-soak.yaml
deploy/macos/: com.yuchida.crypttool.paper-operation.plist.sample
deploy/windows/: register-paper-operation-task.ps1.sample
docs/: architecture.md  assumptions.md  backtesting-methodology.md  data-model.md  implementation-status.md  live-trading-interface.md  paper-operation.md  paper-trading.md  public-api-smoke-2026-07-12.md  r4-market-data-certification.md  requirements.md  research-pipeline-r1.md  review-readiness.md  risk-management.md  strategy-design.md  testing-strategy.md  validation-methodology.md  venue-policy.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_cross_venue_clock.py  0003_preflight_bindings.py  0004_preflight_binding_constraints.py  0005_position_reconciliation.py  0006_position_snapshot_constraint.py  0007_research_pipeline.py  0008_research_data_operations.py  0009_collector_correctness.py  0010_collector_leases.py  0011_collector_pid_identity.py  0012_orderbook_recovery_checkpoint.py  (+5 more)
scripts/: check_coverage.py  package_capability_audit.py  verify_capability_audit_artifact.py  write_build_verification.py
src/app/: __init__.py  (+1 more)
(+203 files in other folders)
