[project]
name = "cryptbot-regime-engine"
version = "0.1.0"
description = "Auditable crypto market data and regime research platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13", "httpx>=0.27", "numpy>=2.0", "pandas>=2.2",
  "pydantic>=2.8", "pydantic-settings>=2.4", "scikit-learn>=1.5",
  "psycopg[binary]>=3.2", "scipy>=1.14", "sqlalchemy>=2.0", "statsmodels>=0.14",
  "structlog>=24.2", "tenacity>=9.0", "typer>=0.12", "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["hypothesis>=6.110", "mypy>=1.11", "pandas-stubs>=2.2", "pytest>=8.3", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.6", "bandit>=1.7"]

[project.scripts]
app = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
